--- a/.github/workflows/build-jobs.yml
+++ b/.github/workflows/build-jobs.yml
@@ -44,6 +44,6 @@ jobs:
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
             git add data/jobs.json data/seekers.json
-            git commit -m "chore: regenerate data JSON from markdown [skip ci]"
+            git commit -m "chore: regenerate data JSON from markdown"
             git push
           fi
